--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ unstructured[local-inference]>=0.10.30  # Para UnstructuredImageLoader
 pytube>=15.0.0  # Para YoutubeLoader
 # Comando para instalar todos os requisitos
 # pip install -r requirements.txt
+streamlit_webrtc
