--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#1bafbd"
-backgroundColor="#d0d0d6"
-secondaryBackgroundColor="#b0b2bb"
+primaryColor="#1898a4"
+backgroundColor="#ededf3"
+secondaryBackgroundColor="#98989e"
 textColor="#000000"
