--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#1898a4"
+primaryColor="#133383"
 backgroundColor="#ededf3"
 secondaryBackgroundColor="#98989e"
 textColor="#000000"
